--- a/main.css
+++ b/main.css
@@ -14,6 +14,9 @@ li {
 	padding: 10px;
 	font-size: .85714rem;
 }
+.montserrat {
+	font-family: 'Montserrat', sans-serif;
+}
 .white-text {
 	color: white;
 }
