--- a/main.css
+++ b/main.css
@@ -23,6 +23,9 @@ li {
 .black-text {
 	color: black;
 }
+.grey-text{
+	color: #bfbfbf;
+}
 .font-12px{
 	font-size:12px;
 }
@@ -129,4 +132,10 @@ li {
 }
 .footer-links {
 	color: #bfbfbf;
+}
+.accordian{
+	background-color: black;
+}
+.radius-0{
+	border-radius: 0px;
 }
