--- a/main.css
+++ b/main.css
@@ -57,12 +57,19 @@ li {
 .right-space{
 	margin-right: 3px;
 }
-.absolute {
+.absolute-image {
 	position: absolute;
 	z-index: 1;
-	top: 0;
-	left: 50%;
-	right: 50%;
+	top: 20px;
+	left: 25%;
+	right: 25%;
+}
+.absolute-text {
+	position: absolute;
+	z-index: 1;
+	top: 100px;
+	left: 10%;
+	right: 10%;
 }
 .carousel-content {
 	position: absolute;
